hphp/hack/test/typecheck/meth_caller/meth_caller_magic.php.exp
File "meth_caller_magic.php", line 8, characters 30-42:
`__construct` is a magic method and cannot be called directly (NastCheck[3011])
File "meth_caller_magic.php", line 8, characters 30-42:
`__construct` is not an instance method and shouldn't be invoked directly (Typing[4463])
